@@ -58,7 +58,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.7.7"
+       version="2.7.8"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
